Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <meta name="google-site-verification" content="6NumB35w5VD040vRJLdQ7eWu9NMd3Wc_g1fN0JZN0f4" />
     <!-- Skip to Content Link for Accessibility -->
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
