--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
                     <div class="hero-social">
                         <p class="social-label">Connect with me:</p>
                         <div class="social-links">
-                            <a href="https://linkedin.com" class="social-icon" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/surya-prakash-8a6736274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                 </svg>
                             </a>
-                            <a href="https://github.com" class="social-icon" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/suryaprakashdeveloperai" class="social-icon" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                                 </svg>
@@ -710,19 +710,19 @@
                         <div class="info-card">
                             <div class="info-icon">📧</div>
                             <h4>Email</h4>
-                            <a href="mailto:surya@example.com">surya@example.com</a>
+                            <a href="mailto:suryaprakashdeveloperai@gmail.com">suryaprakashdeveloperai@gmail.com</a>
                         </div>
 
                         <div class="info-card">
                             <div class="info-icon">📱</div>
                             <h4>Phone</h4>
-                            <a href="tel:+919876543210">+91 98765 43210</a>
+                            <a href="tel:+916382480091">+91 63824 80091</a>
                         </div>
 
                         <div class="info-card">
                             <div class="info-icon">📍</div>
                             <h4>Location</h4>
-                            <p>City, State, India</p>
+                            <p>Dharmapuri, Tamil Nadu, India</p>
                         </div>
 
                         <div class="info-card">
@@ -737,7 +737,7 @@
                 <div class="contact-social">
                     <p>Connect with me on social media:</p>
                     <div class="social-links-large">
-                        <a href="https://linkedin.com" class="social-btn" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.linkedin.com/in/surya-prakash-8a6736274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-btn" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
@@ -745,18 +745,13 @@
                             </svg>
                             LinkedIn
                         </a>
-                        <a href="https://github.com" class="social-btn" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/suryaprakashdeveloperai" class="social-btn" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                             </svg>
                             GitHub
                         </a>
-                        <a href="https://twitter.com" class="social-btn" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2s9 5 20 0a9.5 9.5 0 0 0 3-5.5z"></path>
-                            </svg>
-                            Twitter
-                        </a>
+            
                     </div>
                 </div>
             </div>
@@ -771,8 +766,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Surya Prakash. All rights reserved.</p>
-                <p>Built with <span class="heart">♥</span> using HTML, CSS & JavaScript</p>
+                <p>&copy; 2026 Surya Prakash. All rights reserved.</p>
             </div>
             <a href="#home" class="back-to-top" id="backToTop" aria-label="Back to top">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
