--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Surya Prakash - AI/ML Fresher | B.Tech Computer Science | 7.9 CGPA | Cloud, DevOps, Mobile Development">
-    <meta name="keywords" content="AI, Machine Learning, Cloud, DevOps, Android, Java, Kotlin, Azure, Docker">
+    <meta name="keywords" content="Surya Prakash, AI, Machine Learning, Cloud, DevOps, Android, Java, Kotlin, Azure, Docker">
     <meta name="author" content="Surya Prakash">
 
     <!-- Open Graph Tags for Social Media Sharing -->
