--- a/index.html
+++ b/index.html
@@ -775,7 +775,14 @@
             </a>
         </div>
     </footer>
+    <!-- EmailJS SDK -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
+<script>
+  (function () {
+    emailjs.init("service_3imbcfn");
+  })();
+</script>
     <!-- JavaScript File -->
     <script type="module" src="script.js"></script>
 </body>
