--- a/index.html
+++ b/index.html
@@ -774,15 +774,16 @@
             </a>
         </div>
     </footer>
-    <!-- EmailJS SDK -->
+<!-- EmailJS SDK -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
 <script>
   (function () {
-    emailjs.init("yimsNvie3mecjdnFo");
+    emailjs.init("yimsNvie3mecjdnFo"); // PUBLIC KEY
   })();
 </script>
-    <!-- JavaScript File -->
-    <script type="module" src="script.js"></script>
+
+<script src="script.js"></script>
+
 </body>
 </html>
