--- a/index.html
+++ b/index.html
@@ -777,13 +777,8 @@
 <!-- EmailJS SDK -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
-<script>
-  (function () {
-    emailjs.init("yimsNvie3mecjdnFo"); // PUBLIC KEY
-  })();
-</script>
+<script type="module" src="script.js"></script>
 
-<script src="script.js"></script>
 
 </body>
 </html>
