--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
             id="name"
             name="name"
             class="form-input"
-            placeholder="John Doe"
+            placeholder="Surya Prakash"
             required
             aria-describedby="name-error"
           >
@@ -666,7 +666,7 @@
             id="email"
             name="email"
             class="form-input"
-            placeholder="john@example.com"
+            placeholder="theweekend@example.com"
             required
             aria-describedby="email-error"
           >
@@ -680,7 +680,7 @@
             id="subject"
             name="subject"
             class="form-input"
-            placeholder="Project Opportunity"
+            placeholder="Internship / project"
             required
             aria-describedby="subject-error"
           >
