updated schooling details

--- a/index.html
+++ b/index.html
@@ -565,22 +565,12 @@
                             <div class="education-marker"></div>
                             <div class="education-content">
                                 <h4 class="education-title">B.Tech in Artificial Intelligence & Machine Learning</h4>
-                                <p class="education-institution">Your University Name</p>
+                                <p class="education-institution">Hindusthan College of Engineering and Technology</p>
                                 <p class="education-period">2022 - 2026</p>
                                 <div class="education-details">
-                                    <span class="cgpa-badge">CGPA: 7.9</span>
-                                    <p class="education-description">5 semesters completed. Currently pursuing degree with focus on AI/ML technologies.</p>
+                                    <span class="cgpa-badge">CGPA: 7.98</span>
+                                    <p class="education-description">6 semesters completed. Currently pursuing degree with focus on AI/ML technologies.</p>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div class="education-item">
-                            <div class="education-marker"></div>
-                            <div class="education-content">
-                                <h4 class="education-title">12th Grade</h4>
-                                <p class="education-institution">Your School Name</p>
-                                <p class="education-period">Year</p>
-                                <p class="education-description">Strong foundation in mathematics and science.</p>
                             </div>
                         </div>
                     </div>
@@ -594,7 +584,7 @@
                             <div class="cert-content">
                                 <h4>Azure Fundamentals</h4>
                                 <p>Microsoft Certified Associate</p>
-                                <span class="cert-date">2024</span>
+                                <span class="cert-date">2026</span>
                             </div>
                         </div>
 
@@ -603,7 +593,7 @@
                             <div class="cert-content">
                                 <h4>Machine Learning Specialization</h4>
                                 <p>Coursera Verified Certificate</p>
-                                <span class="cert-date">2023</span>
+                                <span class="cert-date">2026</span>
                             </div>
                         </div>
 
@@ -612,7 +602,7 @@
                             <div class="cert-content">
                                 <h4>Docker & Kubernetes Bootcamp</h4>
                                 <p>Online Certification</p>
-                                <span class="cert-date">2023</span>
+                                <span class="cert-date">2026</span>
                             </div>
                         </div>
 
@@ -621,7 +611,7 @@
                             <div class="cert-content">
                                 <h4>Android App Development</h4>
                                 <p>Professional Training Certificate</p>
-                                <span class="cert-date">2023</span>
+                                <span class="cert-date">2026</span>
                             </div>
                         </div>
                     </div>
