update and push

--- a/index.html
+++ b/index.html
@@ -552,72 +552,117 @@
         <!-- Academic details with CGPA, timeline layout -->
         <!-- ========================================================================== -->
         <section id="education" class="education fade-in-section">
-            <div class="container">
-                <h2 class="section-title">Education & Certifications</h2>
-                <div class="section-divider"></div>
+    <div class="container">
+        <h2 class="section-title">Education & Certifications</h2>
+        <div class="section-divider"></div>
 
-                <div class="education-grid">
-                    <!-- Education Timeline -->
-                    <div class="education-column">
-                        <h3 class="education-subtitle">Academic Qualifications</h3>
+        <div class="education-grid">
+            <!-- Education Timeline -->
+            <div class="education-column">
+                <h3 class="education-subtitle">Academic Qualifications</h3>
 
-                        <div class="education-item">
-                            <div class="education-marker"></div>
-                            <div class="education-content">
-                                <h4 class="education-title">B.Tech in Artificial Intelligence & Machine Learning</h4>
-                                <p class="education-institution">Hindusthan College of Engineering and Technology</p>
-                                <p class="education-period">2022 - 2026</p>
-                                <div class="education-details">
-                                    <span class="cgpa-badge">CGPA: 7.98</span>
-                                    <p class="education-description">6 semesters completed. Currently pursuing degree with focus on AI/ML technologies.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Certifications -->
-                    <div class="education-column">
-                        <h3 class="education-subtitle">Certifications & Achievements</h3>
-
-                        <div class="certification-item">
-                            <div class="cert-icon">🏆</div>
-                            <div class="cert-content">
-                                <h4>Azure Fundamentals</h4>
-                                <p>Microsoft Certified Associate</p>
-                                <span class="cert-date">2026</span>
-                            </div>
-                        </div>
-
-                        <div class="certification-item">
-                            <div class="cert-icon">📊</div>
-                            <div class="cert-content">
-                                <h4>Machine Learning Specialization</h4>
-                                <p>Coursera Verified Certificate</p>
-                                <span class="cert-date">2026</span>
-                            </div>
-                        </div>
-
-                        <div class="certification-item">
-                            <div class="cert-icon">🐳</div>
-                            <div class="cert-content">
-                                <h4>Docker & Kubernetes Bootcamp</h4>
-                                <p>Online Certification</p>
-                                <span class="cert-date">2026</span>
-                            </div>
-                        </div>
-
-                        <div class="certification-item">
-                            <div class="cert-icon">📱</div>
-                            <div class="cert-content">
-                                <h4>Android App Development</h4>
-                                <p>Professional Training Certificate</p>
-                                <span class="cert-date">2026</span>
-                            </div>
+                <div class="education-item">
+                    <div class="education-marker"></div>
+                    <div class="education-content">
+                        <h4 class="education-title">
+                            B.Tech in Artificial Intelligence & Machine Learning
+                        </h4>
+                        <p class="education-institution">
+                            Hindusthan College of Engineering and Technology
+                        </p>
+                        <p class="education-period">2022 – 2026</p>
+                        <div class="education-details">
+                            <span class="cgpa-badge">CGPA: 7.98</span>
+                            <p class="education-description">
+                                6 semesters completed. Currently pursuing degree with focus on AI/ML technologies.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+
+            <!-- Certifications -->
+            <div class="education-column">
+                <h3 class="education-subtitle">Certifications & Achievements</h3>
+
+                <!-- Certification Item -->
+                <div class="certification-item">
+                    <div class="cert-image">
+                        <img src="assets/certificates/azure.png" alt="Azure Fundamentals Certificate">
+                    </div>
+
+                    <div class="cert-content">
+                        <h4>Azure Fundamentals</h4>
+                        <p>Microsoft Certified Associate</p>
+                        <span class="cert-date">2026</span>
+
+                        <a href="assets/certificates/azure-full.pdf"
+                           target="_blank"
+                           class="cert-link">
+                            View Certificate →
+                        </a>
+                    </div>
+                </div>
+
+                <div class="certification-item">
+                    <div class="cert-image">
+                        <img src="assets/certificates/ml.png" alt="Machine Learning Certificate">
+                    </div>
+
+                    <div class="cert-content">
+                        <h4>Machine Learning Specialization</h4>
+                        <p>Coursera Verified Certificate</p>
+                        <span class="cert-date">2026</span>
+
+                        <a href="assets/certificates/ml-full.pdf"
+                           target="_blank"
+                           class="cert-link">
+                            View Certificate →
+                        </a>
+                    </div>
+                </div>
+
+                <div class="certification-item">
+                    <div class="cert-image">
+                        <img src="assets/certificates/docker.png" alt="Docker Kubernetes Certificate">
+                    </div>
+
+                    <div class="cert-content">
+                        <h4>Docker & Kubernetes Bootcamp</h4>
+                        <p>Online Certification</p>
+                        <span class="cert-date">2026</span>
+
+                        <a href="assets/certificates/docker-full.pdf"
+                           target="_blank"
+                           class="cert-link">
+                            View Certificate →
+                        </a>
+                    </div>
+                </div>
+
+                <div class="certification-item">
+                    <div class="cert-image">
+                        <img src="assets/certificates/android.png" alt="Android Development Certificate">
+                    </div>
+
+                    <div class="cert-content">
+                        <h4>Android App Development</h4>
+                        <p>Professional Training Certificate</p>
+                        <span class="cert-date">2026</span>
+
+                        <a href="assets/certificates/android-full.pdf"
+                           target="_blank"
+                           class="cert-link">
+                            View Certificate →
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <!-- ========================================================================== -->
         <!-- CONTACT SECTION -->
