Comment out AI/ML project sections in index.html
Commented out sections related to AI/ML projects and filter buttons in the projects portfolio.

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </div>
 
                     <!-- AI/ML & Data Science Category -->
-                    <div class="skill-category">
+                    <!-- <div class="skill-category">
                         <h3 class="category-title">AI/ML & Data Science</h3>
 
                         <div class="skill-item">
@@ -349,7 +349,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- ========================================================================== -->
         <!-- PROJECTS PORTFOLIO SECTION -->
@@ -363,7 +363,7 @@
                 <!-- Project Filter Buttons -->
                 <div class="filter-buttons">
                     <button class="filter-btn active" data-filter="all">All Projects</button>
-                    <button class="filter-btn" data-filter="ml">Machine Learning</button>
+                    <!-- <button class="filter-btn" data-filter="ml">Machine Learning</button> -->
                     <button class="filter-btn" data-filter="mobile">Mobile Apps</button>
                     <button class="filter-btn" data-filter="cloud">Cloud & DevOps</button>
                 </div>
@@ -371,7 +371,7 @@
                 <!-- Projects Grid -->
                 <div class="projects-grid">
                     <!-- Project Card 1: ML Project -->
-                    <div class="project-card" data-category="ml">
+                    <!-- <div class="project-card" data-category="ml">
                         <div class="project-image">
                             <img src="https://images.pexels.com/photos/3779035/pexels-photo-3779035.jpeg?auto=compress&cs=tinysrgb&w=600" alt="AI Model Training">
                             <div class="project-overlay">
@@ -397,7 +397,7 @@
                                 <a href="#" class="project-link">Live Demo</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project Card 2: Mobile App -->
                     <div class="project-card" data-category="mobile">
@@ -458,7 +458,7 @@
                     </div>
 
                     <!-- Project Card 4: ML Project -->
-                    <div class="project-card" data-category="ml">
+                    <!-- <div class="project-card" data-category="ml">
                         <div class="project-image">
                             <img src="https://images.pexels.com/photos/3825517/pexels-photo-3825517.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Data Analysis">
                             <div class="project-overlay">
@@ -484,7 +484,7 @@
                                 <a href="#" class="project-link">Live Demo</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Project Card 5: Mobile App -->
                     <div class="project-card" data-category="mobile">
