update and push

--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
                     </div>
 
                     <!-- AI/ML & Data Science Category -->
-                    <!-- <div class="skill-category">
-                        <h3 class="category-title">AI/ML & Data Science</h3>
+                    <div class="skill-category">
+                        <h3 class="category-title">BackEnd</h3>
 
                         <div class="skill-item">
                             <div class="skill-header">
-                                <span class="skill-name">Machine Learning</span>
-                                <span class="skill-percentage">78%</span>
+                                <span class="skill-name">SpringBoot</span>
+                                <span class="skill-percentage">60%</span>
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 0%" data-width="78%"></div>
@@ -329,8 +329,8 @@
 
                         <div class="skill-item">
                             <div class="skill-header">
-                                <span class="skill-name">TensorFlow / PyTorch</span>
-                                <span class="skill-percentage">75%</span>
+                                <span class="skill-name">RestAPI</span>
+                                <span class="skill-percentage">65%</span>
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 0%" data-width="75%"></div>
@@ -339,8 +339,8 @@
 
                         <div class="skill-item">
                             <div class="skill-header">
-                                <span class="skill-name">Data Analysis</span>
-                                <span class="skill-percentage">76%</span>
+                                <span class="skill-name">Firebase</span>
+                                <span class="skill-percentage">70%</span>
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 0%" data-width="76%"></div>
@@ -349,7 +349,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- ========================================================================== -->
         <!-- PROJECTS PORTFOLIO SECTION -->
