updated a small changes

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                         <p>Online Certification</p>
                         <span class="cert-date">2026</span>
 
-                        <a href="assets/certificates/docker-full.pdf"
+                        <a href="DevOps Kubernetes Certificate.jpg"
                            target="_blank"
                            class="cert-link">
                             View Certificate →
@@ -650,7 +650,7 @@
                         <p>Professional Training Certificate</p>
                         <span class="cert-date">2026</span>
 
-                        <a href="assets/certificates/android-full.pdf"
+                        <a href="Android Certificate.jpg"
                            target="_blank"
                            class="cert-link">
                             View Certificate →
