update certificate error

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
                 <div class="certification-item">
                     <div class="cert-image">
-                        <img src="assets/certificates/docker.png" alt="Docker Kubernetes Certificate">
+                        <img src="DevOps Kubernetes Certificate.jpg" alt="Docker Kubernetes Certificate">
                     </div>
 
                     <div class="cert-content">
@@ -642,7 +642,7 @@
 
                 <div class="certification-item">
                     <div class="cert-image">
-                        <img src="assets/certificates/android.png" alt="Android Development Certificate">
+                        <img src="Android Certificate.jpg" alt="Android Development Certificate">
                     </div>
 
                     <div class="cert-content">
