updated professional certifications to online crtifications in the android certificate area

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 
                     <div class="cert-content">
                         <h4>Android App Development</h4>
-                        <p>Professional Training Certificate</p>
+                        <p>Online Certification</p>
                         <span class="cert-date">2026</span>
 
                         <a href="Android Certificate.jpg"
