--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                             <div class="project-overlay">
                                 <div class="project-overlay-content">
                                     <h3>Android App Success</h3>
-                                    <p>Feature-rich application with 4.8 star rating</p>
+                                    <p>Feature-rich application</p>
                                 </div>
                             </div>
                         </div>
@@ -510,7 +510,7 @@
                             </div>
                             <div class="project-links">
                                 <a href="https://github.com" class="project-link" target="_blank" rel="noopener noreferrer">View Code</a>
-                                <a href="#" class="project-link">Live Demo</a>
+                                <a href="https://sky-weather-api-ekc5f4ajd0cddact.southeastasia-01.azurewebsites.net/weather?city=Chennai" class="project-link">Live Demo</a>
                             </div>
                         </div>
                     </div>
