updated cgpa nd contents

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                     <!-- Description -->
                     <p class="hero-description">
-                        B.Tech in Artificial Intelligence & Machine Learning | CGPA: 7.9 |
+                        B.Tech in Artificial Intelligence & Machine Learning | CGPA: 8.03 |
                         Passionate about building intelligent solutions with Cloud, DevOps, and Mobile Development
                     </p>
 
@@ -158,15 +158,14 @@
                 <div class="about-content">
                     <p class="about-text">
                         I'm a passionate B.Tech student in Artificial Intelligence and Machine Learning with a strong foundation in
-                        software development and cloud technologies. Currently in my 5th semester with a CGPA of 7.9, I'm actively
+                        software development and cloud technologies. Currently in my 7th semester with a CGPA of 7.9, I'm actively
                         seeking entry-level opportunities to apply my technical knowledge and contribute to innovative projects.
                     </p>
 
                     <p class="about-text">
-                        My interest lies at the intersection of machine learning and cloud infrastructure. I'm particularly fascinated by
-                        leveraging AI/ML techniques to solve real-world problems and building scalable, robust systems. I have hands-on
-                        experience with cloud platforms like Azure, containerization with Docker and Kubernetes, and mobile application
-                        development using Kotlin and Android Studio.
+                       My interest lies at the intersection of cloud infrastructure and scalable system design.
+                       I’m particularly fascinated by building robust, real-world solutions and designing systems that are reliable, efficient, and scalable
+                       .I have hands-on experience with cloud platforms like Azure, containerization using Docker and Kubernetes, and mobile application development with Kotlin and Android Studio.
                     </p>
 
                     <p class="about-text">
@@ -181,7 +180,7 @@
                         <div class="highlight-box">
                             <h3>Education</h3>
                             <p>B.Tech in AI & ML</p>
-                            <span class="highlight-detail">7.9 CGPA (5 semesters)</span>
+                            <span class="highlight-detail">8.03 CGPA (6 semesters)</span>
                         </div>
                         <div class="highlight-box">
                             <h3>Status</h3>
